api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:  
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
        labels: 
          app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/norbinto/api:1.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
      imagePullSecrets:
      - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata: 
  name: api-service
spec: 
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
