redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:  
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
        labels: 
          app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: Always
        
        resources:
          requests:
            memory: "64Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata: 
  name: redis
spec: 
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
